--- a/SpritePatrick-war/nbproject/project.properties
+++ b/SpritePatrick-war/nbproject/project.properties
@@ -1,8 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -41,13 +43,17 @@ j2ee.server.type=gfv5ee8
 jar.compress=false
 javac.classpath=\
     ${reference.SpritePatrick-ejb.dist}:\
-    ${libs.javaee-api-8.0.classpath}
+    ${libs.javaee-api-8.0.classpath}:\
+    ${libs.jsf20.classpath}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
