rest is running

--- a/SpritePatrick-war/nbproject/project.properties
+++ b/SpritePatrick-war/nbproject/project.properties
@@ -80,6 +80,7 @@ platform.active=default_platform
 project.SpritePatrick-ejb=../SpritePatrick-ejb
 reference.SpritePatrick-ejb.dist=${project.SpritePatrick-ejb}/dist/SpritePatrick-ejb.jar
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
